tests/snapshots/options__opt_hscroll_begin@001.snap
---
source: tests/options.rs
description: "input: items [&format!(\"b{}\", &[\"a\"; 1000].join(\"\"))]\noptions: -q b"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> baaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa..."
"  1/1                                                                        0/0"
"> b                                                                             "
cursor: (24, 4)
