tests/snapshots/options__opt_hscroll_end@001.snap
---
source: tests/options.rs
description: "input: items [&format!(\"{}b\", &[\"a\"; 1000].join(\"\"))]\noptions: -q b"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> ...aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
"  1/1                                                                        0/0"
"> b                                                                             "
cursor: (24, 4)
