tests/snapshots/options__opt_hscroll_middle@001.snap
---
source: tests/options.rs
description: "input: items [&format!(\"{}b{}\", &[\"a\"; 1000].join(\"\"), &[\"a\"; 1000].join(\"\"))]\noptions: -q b"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> ...aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa..."
"  1/1                                                                        0/0"
"> b                                                                             "
cursor: (24, 4)
