tests/snapshots/options__opt_info_control@002.snap
---
source: tests/options.rs
description: "input: items [\"a\", \"b\", \"c\"]\noptions: \nafter:\n  @char 'a'"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> a                                                                             "
"  1/3                                                                        0/0"
"> a                                                                             "
cursor: (24, 4)
