tests/snapshots/options__opt_info_hidden@001.snap
---
source: tests/options.rs
description: "input: items [\"a\", \"b\", \"c\"]\noptions: --info hidden"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  c                                                                             "
"  b                                                                             "
"> a                                                                             "
">                                                                               "
cursor: (25, 3)
